# chat2calendar

./: README.md
client/: README.md  middleware.ts  next.config.mjs  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/health/: route.ts
client/app/chat/: page.tsx
client/app/oauth/callback/: page.tsx
client/components/: auth-guard.tsx  chat-input.tsx  chat-message.tsx  landing-hero.tsx  mobile-header.tsx
client/hooks/: use-auth.tsx  use-chat.ts  use-i18n.tsx
client/lib/: api.ts  auth.ts  i18n.ts
server/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
server/app/: __init__.py  cli.py  config.py  dependencies.py  main.py
server/app/modules/: __init__.py
server/app/modules/ai/: __init__.py  ai_controller.py  calendar_agent.py  memory.py
server/app/modules/auth/: auth_controller.py  auth_service.py  google_oauth_service.py
server/app/modules/auth/models/: __init__.py  auth_requests.py
server/app/modules/calendar/: __init__.py  google_calendar_service.py
server/app/shared/: __init__.py
server/app/shared/middleware/: app_auth.py  google_token.py
